[gd_scene load_steps=42 format=3 uid="uid://b0xqmq6324es1"]

[ext_resource type="Script" path="res://Player/Attack/ice_block.gd" id="1_712pp"]
[ext_resource type="Texture2D" uid="uid://bnj5beqv0v54f" path="res://Textures/Player/Eleanore/IceBlockHit1SpriteSheet.png" id="2_pcj1f"]
[ext_resource type="Texture2D" uid="uid://cylal0cqv45qe" path="res://Textures/Player/Eleanore/IceBlockHit2SpriteSheet.png" id="3_dw3i3"]
[ext_resource type="Texture2D" uid="uid://dtve1ef73fbjq" path="res://Textures/Player/Eleanore/IceBlockHit3BreakSpriteSheet.png" id="4_dtpfj"]
[ext_resource type="Texture2D" uid="uid://7a4223i513gh" path="res://Textures/Player/Eleanore/IceBlockSpriteSheet.png" id="5_aesey"]
[ext_resource type="AudioStream" uid="uid://drrquvalm273c" path="res://Audio/SoundEffect/01_Fire_Cast.wav" id="15_y34k6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ffje4"]
atlas = ExtResource("2_pcj1f")
region = Rect2(0, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rkk7"]
atlas = ExtResource("2_pcj1f")
region = Rect2(256, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdpjm"]
atlas = ExtResource("2_pcj1f")
region = Rect2(512, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_anbg1"]
atlas = ExtResource("3_dw3i3")
region = Rect2(0, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlmpu"]
atlas = ExtResource("3_dw3i3")
region = Rect2(256, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvouw"]
atlas = ExtResource("3_dw3i3")
region = Rect2(512, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_bk55o"]
atlas = ExtResource("4_dtpfj")
region = Rect2(0, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pmly"]
atlas = ExtResource("4_dtpfj")
region = Rect2(256, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjf82"]
atlas = ExtResource("4_dtpfj")
region = Rect2(512, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_58sqv"]
atlas = ExtResource("4_dtpfj")
region = Rect2(768, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_hay3k"]
atlas = ExtResource("4_dtpfj")
region = Rect2(1024, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p5kv"]
atlas = ExtResource("4_dtpfj")
region = Rect2(1280, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_qe1b5"]
atlas = ExtResource("4_dtpfj")
region = Rect2(1536, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktr8i"]
atlas = ExtResource("4_dtpfj")
region = Rect2(1792, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_1567u"]
atlas = ExtResource("4_dtpfj")
region = Rect2(2048, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7db2c"]
atlas = ExtResource("4_dtpfj")
region = Rect2(2304, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_crf5a"]
atlas = ExtResource("4_dtpfj")
region = Rect2(2560, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_ipx0s"]
atlas = ExtResource("4_dtpfj")
region = Rect2(2816, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyd6i"]
atlas = ExtResource("4_dtpfj")
region = Rect2(3072, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_chgn1"]
atlas = ExtResource("4_dtpfj")
region = Rect2(3328, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_sskld"]
atlas = ExtResource("4_dtpfj")
region = Rect2(3584, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wmsl"]
atlas = ExtResource("4_dtpfj")
region = Rect2(3840, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ucax"]
atlas = ExtResource("5_aesey")
region = Rect2(0, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdosd"]
atlas = ExtResource("5_aesey")
region = Rect2(256, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdgu4"]
atlas = ExtResource("5_aesey")
region = Rect2(512, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_iycd3"]
atlas = ExtResource("5_aesey")
region = Rect2(768, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_r57ub"]
atlas = ExtResource("5_aesey")
region = Rect2(1024, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_7dara"]
atlas = ExtResource("5_aesey")
region = Rect2(1280, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_agfn0"]
atlas = ExtResource("5_aesey")
region = Rect2(1536, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_hf0tc"]
atlas = ExtResource("5_aesey")
region = Rect2(1792, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ysq8"]
atlas = ExtResource("5_aesey")
region = Rect2(2048, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_tfxvx"]
atlas = ExtResource("5_aesey")
region = Rect2(2304, 0, 256, 144)

[sub_resource type="AtlasTexture" id="AtlasTexture_oybx6"]
atlas = ExtResource("5_aesey")
region = Rect2(2560, 0, 256, 144)

[sub_resource type="SpriteFrames" id="SpriteFrames_pqpde"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffje4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rkk7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdpjm")
}],
"loop": false,
"name": &"hit1",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_anbg1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlmpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvouw")
}],
"loop": false,
"name": &"hit2",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bk55o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pmly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjf82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_58sqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hay3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p5kv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qe1b5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktr8i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1567u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7db2c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_crf5a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ipx0s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyd6i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chgn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sskld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wmsl")
}],
"loop": false,
"name": &"hit3break",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ucax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdosd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gdgu4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iycd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r57ub")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7dara")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agfn0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hf0tc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ysq8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tfxvx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oybx6")
}],
"loop": false,
"name": &"launch",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wjbr"]
size = Vector2(69.025, 52.03)

[node name="IceBlock" type="Area2D" groups=["attack"]]
top_level = true
collision_layer = 4
collision_mask = 0
script = ExtResource("1_712pp")

[node name="AnimatedSprite" type="AnimatedSprite2D" parent="."]
self_modulate = Color(0.8, 0.8, 0.8, 0.705882)
sprite_frames = SubResource("SpriteFrames_pqpde")
animation = &"launch"
frame = 10
frame_progress = 1.0

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(78.9848, -6.7377)
rotation = -1.57079
scale = Vector2(0.999999, 0.999999)
shape = SubResource("RectangleShape2D_5wjbr")

[node name="LaunchSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_y34k6")
volume_db = -10.0
pitch_scale = 1.4

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
